deleted task cards from the bottom and fixed app alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .App {
     text-align: center;
     background-color: #282c34;
+    padding: 1em;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     font-size: calc(10px + 2vmin);
     color: white;
     flex-grow: 1;
